added array methods practices

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Quote Fixer</title>
 </head>
 <body>
-    
+    <h1>Quote Fixer</h1>
     <script src="./script.js"></script>
 </body>
 </html>
